manifests/istio/fault-injection/delay/virtual-service-recommendation-delay.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:

  name: recommendation

spec:
  hosts:
  - recommendation
  http:
  - fault:
      delay:
        fixedDelay: 7.000s
        percent: 50
    route:
    - destination:
        host: recommendation
        subset: app-recommendation
---
